# connected-home

./: .dockerignore  .drone.yml  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  Tiltfile  docker-compose.yaml  requirements.txt  rustfmt.toml
.cargo/: config
.githooks/: pre-commit  pre-push
.sqlx/: query-9952d043f4dfde2ea1efe8e0dc4f8eda4988d6ce016b1d4e8cc1b6250f38eb38.json  query-9a7a01a85e9db973ffcc2f8a23b997c705ac539564f219fcd3d6d2923b0d8538.json
crates/api-gateway/: Cargo.toml  config-local.toml.tmpl
crates/api-gateway/doc/: swagger.yaml
crates/api-gateway/migrations/2021-10-04-121004_users/: up.sql
crates/api-gateway/src/: config.rs  context.rs  lib.rs  main.rs
crates/api-gateway/src/api/: api.rs  countries.rs  login.rs  mod.rs  profile.rs  register.rs
crates/api-gateway/src/api/user/: login.rs  mod.rs  profile.rs  register.rs
crates/api-gateway/src/server/: mod.rs
crates/api-gateway/src/server/layer/: authorization_extractor.rs  mod.rs
crates/api-gateway/src/server/realm/user/: login.rs  mod.rs  profile.rs  register.rs
crates/api-gateway/src/users/: jwt.rs  mod.rs  user.rs
crates/common/: Cargo.toml
crates/common/src/: context.rs  error.rs  lib.rs
crates/common/src/auth/: jwt.rs
crates/common/src/metrics/: mod.rs
crates/common/src/mqtt/: mod.rs
crates/common/src/mqtt/events/: energy.rs  mod.rs
crates/common/src/repo/: mod.rs
crates/common/src/rest/: mod.rs
crates/common/src/server/: mod.rs
crates/common/src/tracing/: config.rs  mod.rs
crates/common/src/util/: channel.rs  cli.rs  mod.rs  task.rs
crates/consuimer/: Cargo.toml
crates/consuimer/src/: main.rs
crates/consumer/: Cargo.toml  config-local.toml.tmpl
crates/consumer/src/: config.rs  context.rs  main.rs  metrics.rs
crates/consumer/src/server/: mod.rs
crates/consumer/src/tasks/: energy_monitor.rs  mod.rs  mqtt_consumer.rs
crates/grpc/: Cargo.toml  build.rs
crates/grpc/proto/: user.proto
crates/grpc/src/: lib.rs
crates/kafka_consumer/: Cargo.toml
crates/kafka_consumer/src/: main.rs
crates/kafka_producer/: Cargo.toml
crates/kafka_producer/src/: main.rs
crates/producer/: Cargo.toml  config-local.toml.tmpl
crates/producer/src/: config.rs  main.rs
crates/producer/src/tasks/: current_monitor.rs  mod.rs
crates/types/: Cargo.toml
crates/types/src/: jwt.rs  lib.rs
crates/user-service/: Cargo.toml  config-local.toml.tmpl
crates/user-service/migrations/: 20230828152318_crate_users_table.sql
crates/user-service/migrations/00000000000000_diesel_initial_setup/: up.sql
crates/user-service/src/: config.rs  context.rs  error.rs  main.rs  metrics.rs  schema.rs
crates/user-service/src/repo/: mod.rs  pg.rs
crates/user-service/src/server/: grpc.rs  http.rs
crates/user-service/src/user/: handlers.rs  mod.rs
docker/grafana/provisioning/datasources/: datasources.yml
docker/postgresql/: init.sql
docker/prometheus/: prometheus.yml
docker/rust/: builder.Dockerfile  service.Dockerfile
dockerfiles/: Build
frontend/: .env  .gitignore  Dockerfile  README.md  default.conf  package-lock.json  package.json
frontend/src/: App.tsx  Routes.tsx  UseToken.tsx  index.tsx
frontend/src/api/: countries.tsx  dashboard.tsx  login.tsx  register.tsx
frontend/src/components/: Logout.tsx  NavigationBar.tsx
frontend/src/pages/: About.tsx  Dashboard.tsx  Home.tsx  Login.tsx  Register.css  Register.tsx
helm/api-gateway/: Chart.yaml  values.yaml
helm/api-gateway/templates/: deployment.yaml
helm/consumer/: Chart.yaml  values.yaml
helm/consumer/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
helm/consumer/templates/tests/: test-connection.yaml
helm/frontend/: Chart.yaml  values.yaml
helm/frontend/templates/: deployment.yaml
helm/jaeger/: Chart.yaml  values.yaml
helm/jaeger/templates/: deployment.yaml  hpa.yaml  service.yaml  serviceaccount.yaml
helm/jaeger/templates/tests/: test-connection.yaml
helm/postgresql/: Chart.yaml  values.yaml
helm/producer/: Chart.yaml  values.yaml
helm/producer/templates/: NOTES.txt  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
helm/rabbitmq/: Chart.yaml  values.yaml
helm/redpanda/: values.yaml
helm/swagger/: Chart.yaml  values.yaml
helm/swagger/spec/: swagger.yaml
helm/swagger/templates/: configmap.yaml  deployment.yaml
helm/user-service/: Chart.yaml  values.yaml
helm/user-service/templates/: deployment.yaml  service.yaml
helm/vault/: Chart.yaml  values.yaml
scripts/: vault-init.sh
tests/features/: environment.py  user-service.feature
tests/features/requests/user-service/: profile.json
tests/features/responses/user-service/: profile.json
tests/features/steps/: basic_api.py
