[package]
name = "api-gateway"
version = "0.1.0"
authors = ["Steve Sampson <mail@stephensampson.dev>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
grpc = { path = "../grpc" }
hyper = "0.14.13"
opentelemetry = { version = "0.18.0", default-features = false, features = ["trace"] }
opentelemetry-jaeger = "0.17.0"
prost = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["fs", "sync", "time", "io-util"] }
tokio-stream = "0.1.1"
tokio-util = { version = "0.6", features = ["io"] }
tonic = "0.8.1"
tracing = "0.1.35"
tracing-attributes = "0.1.22"
tracing-core = { version = "0.1.28" }
tracing-opentelemetry = "0.18.0"
tracing-subscriber = { version = "0.3.0", features = ["json", "env-filter"] }
types = { path = "../types" }
warp = "0.3"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "io-util"] }
