[package]
name = "common"
version = "0.1.0"
authors = ["Steve Sampson <mail@stephensampson.dev>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hmac = "0.11.0"
hyper = "0.14"
jwt = "0.15.0"
rand = "0.7.2"
rust-argon2 = "0.6.0"
sha2 = "0.9.8"
warp = "0.3"
