[package]
name = "common"
version = "0.1.0"
authors = ["Steve Sampson <mail@stephensampson.dev>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.61"
axum = "0.6.7"
#axum-macros = "0.3.4"  # Useful for enabling debug handler
chrono = { version = "0.4.19", features = ["serde"] }
clap = { version = "4.1.8", features = ["derive", "env", "cargo"] }
derive_more = "0.99.17"
http = "0.2.9"
hmac = "0.12.1"
hyper = "0.14"
jwt = "0.16.0"
prometheus = "0.13.3"
rand = "0.8.5"
rust_decimal = "1.32.0"
rumqttc = "0.22.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
sha2 = "0.10.6"
slog = "2.7.0"
sqlx = { version = "0.7.1", features = [ "runtime-tokio-native-tls" , "postgres", "json", "migrate", "time", "uuid", "chrono" ] }
thiserror = "1.0.38"
tokio = { version = "1.28.2", features = ["full", "tracing"] }
toml = "0.5.10"
tonic = "0.9.2"
url = "2.3.1"
uuid = { version = "1.3.3", features = ["serde", "v4"] }


#rust_decimal_macros = "1.32"

# tracing dependencies
tracing = { version = "0.1.37", default-features = false, features = ["std", "attributes"] }
tracing-subscriber = { version = "0.3.17", default-features = false, features = ["json", "env-filter", "serde"] }
tracing-opentelemetry = { version = "0.18.0", default-features = true }
opentelemetry = { version = "0.18.0", default-features = false, features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.11.0", default-features = false, features = ["trace", "grpc-tonic"] }
#opentelemetry-http = { version = "0.8.0", default-features = false, features = ["reqwest", "tokio"] }
opentelemetry_sdk = { version = "0.19.0", features = ["trace"] }
tracing-attributes = "0.1.24"
tracing-core = { version = "0.1.31" }

