[package]
name = "consumer"
version = "0.1.0"
authors = ["Steve Sampson <mail@stephensampson.dev>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = '../common' }

async-trait = "0.1.68"
axum = "0.6.7"
#axum-macros = "0.3.4"  # Useful for enabling debug handler
axum-tracing-opentelemetry = "0.10.0"
chrono = "0.4.26"
http = "0.2.8"
http-body = "0.4.5"
hyper = "0.14.13"
opentelemetry = { version = "0.18.0", default-features = false, features = ["trace"] }
prometheus = "0.13.3"
rand = "0.8.5"
rust_decimal = "1.32"
rust_decimal_macros = "1.32"
rumqttc = "0.22.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slog = { version = "2.7.0", features = ["max_level_trace"] }
slog-async = "2.7.0"
slog-term = "2.9.0"
slog-envlogger = "2.2.0"
tokio = { version = "1.0", features = ["fs", "sync", "time", "io-util"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.3.5", features = ["full"] }
tracing = "0.1.35"
tracing-attributes = "0.1.22"
tracing-core = { version = "0.1.28" }
tracing-opentelemetry = "0.18.0"
tracing-subscriber = { version = "0.3.0", features = ["json", "env-filter"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
