[package]
name = "grpc"
version = "0.1.0"
authors = ["Steve Sampson <mail@stephensampson.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.6.1"
prost = "0.9.0"
prost-types = "0.9.0"

[build-dependencies]
tonic-build = "0.6.0"