[package]
name = "producer"
version = "0.1.0"
authors = ["Steve Sampson <mail@stephensampson.dev>"]
edition = "2018"

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
hyper = "0.14"
routerify = "2.2.0"
tokio = { version = "1.0", features = ["fs", "sync", "time", "io-util"] }
amiquip = { version = "0.4", default-features = false }
warp = "0.3"
common = { path = '../common' }