[package]
name = "producer"
version = "0.1.0"
authors = ["Steve Sampson <mail@stephensampson.dev>"]
edition = "2021"

[dependencies]
common = { path = '../common' }

async-trait = "0.1.68"
chrono = "0.4.26"
prometheus = "0.13.3"
rand = "0.8.5"
rust_decimal = "1.32"
rust_decimal_macros = "1.32"
rumqttc = "0.22.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slog = { version = "2.7.0", features = ["max_level_trace"] }
slog-async = "2.7.0"
slog-term = "2.9.0"
slog-envlogger = "2.2.0"
tokio = { version = "1.0", features = ["fs", "sync", "time", "io-util"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }