[package]
name = "types"
version = "0.1.0"
authors = ["Steve Sampson <mail@stephensampson.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
jwt = "0.15.0"
rand = "0.7.2"
rust-argon2 = "0.6.0"
hmac = "0.11.0"
sha2 = "0.9.8"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.19", features = ["serde"]}
