[package]
name = "user-service"
version = "0.1.0"
authors = ["Steve Sampson <mail@stephensampson.dev>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
common = { path = '../common' }
diesel = { version = "1.4.8", features = ["postgres", "chrono"] }

futures = "0.3.17"
futures-util = "0.3.17"
grpc = { path = "../grpc" }
hmac = "0.11.0"

jwt = "0.15.0"

log = "0.4"
pretty_env_logger = "0.4"
prost = "0.9.0"
rand = "0.7.2"
rust-argon2 = "0.6.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.9.8"
tokio = "1.0"
tonic = "0.6.1"
types = { path = "../types" }
warp = "0.3"
