[package]
name = "user-service"
version = "0.1.0"
authors = ["Steve Sampson <mail@stephensampson.dev>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = '../common' }
grpc = { path = "../grpc" }

async-trait = "0.1.68"
axum = "0.6.7"
#axum-macros = "0.3.4"  # Useful for enabling debug handler
axum-tracing-opentelemetry = "0.10.0"
chrono = { version = "0.4.19", features = ["serde"] }
clap = { version = "4.1.8", features = ["derive", "env", "cargo"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
http = "0.2.8"
http-body = "0.4.5"
hyper = "0.14.13"
opentelemetry = { version = "0.18.0", default-features = false, features = ["trace"] }
prometheus = "0.13.3"
prost = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slog = { version = "2.7.0", features = ["max_level_trace"] }
slog-async = "2.7.0"
slog-term = "2.9.0"
slog-envlogger = "2.2.0"
sqlx = { version = "0.7.1", features = [ "runtime-tokio-native-tls" , "postgres", "json", "migrate", "time", "uuid", "chrono" ] }
tokio = { version = "1.0", features = ["fs", "sync", "time", "io-util"] }
tonic = "0.9.2"
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.3.5", features = ["full"] }
tracing = "0.1.35"
tracing-attributes = "0.1.22"
tracing-core = { version = "0.1.28" }
tracing-opentelemetry = "0.18.0"
tracing-subscriber = { version = "0.3.0", features = ["json", "env-filter"] }
url = { version = "2.3.1", features = ["serde"] }

hmac = "0.11.0"
jwt = "0.15.0"
rand = "0.7.2"
rust-argon2 = "0.6.0"
sha2 = "0.9.8"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "io-util"] }
